[package]
name = "module1b"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = { version = "4" }
actix-files = "0.6.6"
actix-session = { version = "0.10.1", features = ["cookie-session"] }
handlebars = { version = "5.1.2", features = ["dir_source"] }
serde = { version = "1.0" , features = ["derive"]}
reqwest = { version = "0.12.7", features = ["json"] }
serde_json = "1.0.128"